2003-09-01  Metin Amiroff  <metin@karegen.com>

	configure.in: Added "az" in ALL_LINGUAS.

Sun Aug 31 23:27:00 2003  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

Thu Aug 28 23:29:12 2003  George Lebl <jirka@5z.com>

	* src/calc.[ch], src/dict.[ch], src/eval.c, src/funclib.c,
	  src/genius.c, src/gnome-genius.c, src/inter.c, src/lexer.l,
	  src/mpwrap.c, src/structs.h:  Can't sleep so doing general
	  cleanup such as using standard argument checking for functions,
	  fixing up error output, converting to gel_errorout/infoout,
	  and s/int/gboolean/ where appropriate.  Also fixed up the
	  function structure to save sizeof(int) bytes per function.

Thu Aug 28 17:51:35 2003  George Lebl <jirka@5z.com>

	* src/funclib.c: move stuff to generalized function parameter
	  handling as possible.  Should make translations easier.  Also
	  accept identifiers in places where it makes sense to (SetHelp,
	  protect, and such) and add a bunch of G_UNLIKELY/G_LIKELY's

Wed Aug 27 18:06:05 2003  George Lebl <jirka@5z.com>

	* src/dict.c: initialize the function structures correctly.

Thu Aug 21 12:21:16 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: also set the PRIMARY and not just CLIPBOARD on
	  the special copy items

Sat Aug 16 18:58:56 2003  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" for Hindi in ALL_LINGUAS.

Fri Aug 15 02:39:47 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c, src/eval.c, src/calc.c: go wild with G_LIKELY
	  and G_UNLIKELY, some cleanup, fix two very minor leaks.

Mon Jul 28 10:35:26 2003  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h: check for ncurses as well if libtermcap
	  isn't found

	* src/genius.c: use GETTEXT_PACKAGE and not PACKAGE

Thu Jul 24 17:24:59 2003  George Lebl <jirka@5z.com>

	* src/calc.c: I hate it when I apply half of a patch.  in any
	  case yet again from the FreeBSD ports: the glob usage was wrong
